tests/baselines/reference/bigint-numeric-separator-literal-bil-nsl-bd-err.errors.txt
bigint-numeric-separator-literal-bil-nsl-bd-err.ts(42,4): error TS6188: Numeric separators are not allowed here.


==== bigint-numeric-separator-literal-bil-nsl-bd-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the last digit character of a
      BinaryIntegerLiteral (before n)
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      BinaryIntegerLiteral ::
        0b BinaryDigits
        0B BinaryDigits
    
      BinaryDigits ::
        BinaryDigit
        BinaryDigits BinaryDigit
        BinaryDigits NumericLiteralSeparator BinaryDigit
    
      BinaryDigit :: one of
        0 1
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    0b0_n;
       ~
!!! error TS6188: Numeric separators are not allowed here.
    